# nix-jar

./: README.md  flake.nix
basic/: flake.nix
devenv-pyflake/: .editorconfig  .gitignore  pyproject.toml
pydevenv/: .devcontainer.json  flake.nix
pyflake/: flake.nix
pyshell/: shell.nix
python/: .envrc  flake.nix
uvdev/: .gitignore  devenv.nix  devenv.yaml  pyproject.toml
