[tool.poetry]
name = "project"
version = "0.1.0"
description = "A project"
authors = ["Aneeq Asif <aneeqasifazada3gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jq = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
